# SmartHome

./: INSTALL.md
AppServer/: README.md
BoxServer/: README.md
Docs/: DH问题回复-zhangbin-20190722.docx  DH问题回复.docx  SmartHome.xmind  profile.json  smarbox-device-interface.md  智慧家庭_主机接入服务器_REST接口_0.1_zhangbin_20190419.md  智慧家庭_主机接入服务器_REST接口_0.2_zhangbin_20190422.md  (+6 more)
GreenHomeProxyCXX/: CMakeLists.txt  Controller.cpp  Controller.h  README.md  app.cpp  app.h  gateway.txt  iot.cpp  iot.h  message.cpp  message.h  service.h  settings.txt
GreenHomeProxyCXX/data/var/green/: settings.txt
GreenHomeProxyCXX/data/var/green/data/FBXDDD0001/: gateway.txt
GreenHomeProxyCXX/examples/: demo.c  demo.h  gwreginfo.json
GreenHomeProxyCXX/include/: hw_errcode.h  hw_json.h  hw_sys.h  hw_type.h  iota_cfg.h  iota_datatrans.h  iota_device_type.h  iota_hub.h
GreenHomeProxyCXX/inlcude/: hw_log.h  iota_bind.h  iota_device.h  iota_device_type.h  iota_init.h  iota_login.h
GreenHomeProxyCXX/opensource/redis-plus-plus-1.0.2/src/sw/redis++/: config.h
GreenHomeProxyCXX/python/: iot_api_wrapper.py
GreenHomeProxyCXX/scripts/: iot_make_device.py
LoginServer/: README.md
SmartBoxCXX/: CMakeLists.txt  Controller.cpp  Controller.h  Makefile.arm  McuChannel.cpp  McuChannel.h  README.md  README.txt  RELEASE  app.cpp  base.h  base64.cpp  base64.h  connection.cpp  connection.h  http.cpp  http.h  logger.h  main.cpp  mcu.cpp  mcu.h  message.cpp  message.h  profile.json  sensor.cpp  sensor.h  server.cpp  service.h  settings.txt  smartbox  tcpchannel.cpp  tcpchannel.h  utils.cpp  utils.h  version.h
(+100 files in other folders)
